New project structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,34 @@
+[metadata]
+name = roboevo
+version = attr: click.__version__
+url = https://github.com/kngwyu/roboevo
+license = Apache2
+license_files = LICENSE
+author = Yuji Kanagawa
+author_email = yuji.kanagawa@oist.jp
+description = A simulation platform for Evolutionary Robotics
+long_description = file: README.md
+long_description_content_type = text/markdown
+classifiers =
+    Development Status :: 3 - Alpha
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
+    Programming Language :: Python
+
+[options]
+packages = find:
+package_dir = = src
+include_package_data = true
+python_requires = >= 3.6
+# Dependencies are in setup.py for GitHub's dependency graph.
+
+[options.packages.find]
+where = src
+
 [flake8]
 max-line-length = 88
 ignore = W391, W503, F821, E203, E231
-
 
 [isort]
 multi_line_output=3
