Revise the main_loop

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = roboevo
 version = attr: click.__version__
-url = https://github.com/kngwyu/roboevo
+url = https://github.com/kngwyu/emevo
 license = Apache2
 license_files = LICENSE
 author = Yuji Kanagawa
 author_email = yuji.kanagawa@oist.jp
-description = A simulation platform for Evolutionary Robotics
+description = A simulation platform for Embodied Evolution
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
@@ -20,8 +20,7 @@ classifiers =
 packages = find:
 package_dir = = src
 include_package_data = true
-python_requires = >= 3.6
-# Dependencies are in setup.py for GitHub's dependency graph.
+python_requires = >= 3.7
 
 [options.packages.find]
 where = src
