Some more cleanups

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = roboevo
-version = attr: click.__version__
+version = attr: emevo.__version__
 url = https://github.com/kngwyu/emevo
 license = Apache2
 license_files = LICENSE
@@ -21,6 +21,11 @@ packages = find:
 package_dir = = src
 include_package_data = true
 python_requires = >= 3.7
+install_requires =
+    gym
+    numpy
+    pygame
+    scipy
 
 [options.packages.find]
 where = src
