--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = roboevo
+name = emevo
 version = attr: emevo.__version__
 url = https://github.com/kngwyu/emevo
 license = Apache2
