Setup nox and github actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,16 +23,30 @@ include_package_data = true
 python_requires = >= 3.7
 install_requires =
     gym
-    numpy
     pygame
     scipy
 
 [options.packages.find]
 where = src
 
+[tool:pytest]
+testpaths = tests
+filterwarnings =
+    ignore::UserWarning
+
 [flake8]
+# B = bugbear
+# E = pycodestyle errors
+# F = flake8 pyflakes
+# W = pycodestyle warnings
+# B9 = bugbear opinions,
+# ISC = implicit str concat
+select = B, E, F, W, B9, ISC
 max-line-length = 88
 ignore = W391, W503, F821, E203, E231
+per-file-ignores =
+    # __init__ module exports names
+    src/emevo/__init__.py: F401
 
 [isort]
 multi_line_output=3
