--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,11 +18,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {name: Linux, python: '3.9', os: ubuntu-latest, tox: py39}
-          - {name: Windows, python: '3.9', os: windows-latest, tox: py39}
-          - {name: Mac, python: '3.9', os: macos-latest, tox: py39}
-          - {name: '3.8', python: '3.8', os: ubuntu-latest, tox: py38}
-          - {name: '3.7', python: '3.7', os: ubuntu-latest, tox: py37}
+          - {name: Linux, python: '3.9', os: ubuntu-latest, nox: "tests"}
+          - {name: Windows, python: '3.9', os: windows-latest, nox: "tests"}
+          - {name: Mac, python: '3.9', os: macos-latest, nox: "tests"}
+          - {name: '3.8', python: '3.8', os: ubuntu-latest, nox: "tests"}
+          - {name: Lint, python: '3.9', os: ubuntu-latest, nox: "lint"}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -34,4 +34,4 @@ jobs:
           pip install -U setuptools
           python -m pip install -U pip
       - run: pip install nox
-      - run: nox --session tests lint
+      - run: nox --session=${{ matrix.nox }} --python=${{ matrix.python }}
