Change the directory structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,7 @@ package_dir = = src
 include_package_data = true
 python_requires = >= 3.8
 install_requires =
-    gym
-    pygame
-    scipy
+    numpy
 
 [options.packages.find]
 where = src
