--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ package_dir = = src
 include_package_data = true
 python_requires = >= 3.8
 install_requires =
+    loguru >= 0.6
     numpy >= 1.20
 
 [options.packages.find]
