--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ python_requires = >= 3.8
 install_requires =
     loguru >= 0.6
     numpy >= 1.20
+    pymunk >= 6.0
 
 [options.packages.find]
 where = src
