--- a/setup.cfg
+++ b/setup.cfg
@@ -1,24 +1,30 @@
 [metadata]
 name = emevo
 version = attr: emevo.__version__
-url = https://github.com/kngwyu/emevo
-license = Apache2
-license_files = LICENSE
 author = Yuji Kanagawa
 author_email = yuji.kanagawa@oist.jp
-description = A simulation platform for Embodied Evolution
+description = A simulation platform for Embodied Evolution of learning agents
 long_description = file: README.md
 long_description_content_type = text/markdown
+url = https://github.com/kngwyu/emevo
+project_urls =
+    Bug Tracker = https://github.com/kngwyu/emevo/issues
+license = Apache2
+license_files = LICENSE
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: Apache Software License
+    Natural Language :: English
     Operating System :: OS Independent
-    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Topic :: Scientific/Engineering :: Artificial Life
+    Typing :: Typed
 
 [options]
 packages = find:
-package_dir = = src
+package_dir =
+    = src
 include_package_data = true
 python_requires = >= 3.8
 install_requires =
@@ -47,12 +53,3 @@ ignore = W391, W503, F821, E203, E231
 per-file-ignores =
     # __init__ module exports names
     src/emevo/__init__.py: F401
-
-[isort]
-multi_line_output=3
-include_trailing_comma=True
-force_grid_wrap=0
-use_parentheses=True
-line_length=88
-lines_between_types=1
-combine_as_imports=True
