Add _test_utils and place foods correctly

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+# TODO: Use pyproject.toml when it's stable
+# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
+
 [metadata]
 name = emevo
 version = attr: emevo.__version__
@@ -37,8 +40,6 @@ where = src
 
 [tool:pytest]
 testpaths = tests
-filterwarnings =
-    ignore::UserWarning
 
 [flake8]
 # B = bugbear
