--- a/setup.cfg
+++ b/setup.cfg
@@ -53,4 +53,4 @@ max-line-length = 88
 ignore = W391, W503, F821, E203, E231
 per-file-ignores =
     # __init__ module exports names
-    src/emevo/__init__.py: F401
+    src/**/__init__.py: F401
