--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,4 +47,10 @@ testpaths = ["tests"]
 profile = "black"
 
 [tool.pyright]
-include = ["src"]
+include = ["src", "smoke-tests", "tests"]
+extraPaths = [
+    ".nox/tests-3-8/lib/python3.8/site-packages/",
+    ".nox/tests-3-9/lib/python3.9/site-packages/",
+    ".nox/tests-3-10/lib/python3.10/site-packages/",
+    "src",
+]
