--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,20 +18,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {name: Linux, python: '3.9', os: ubuntu-latest, nox: "tests"}
-          - {name: Windows, python: '3.9', os: windows-latest, nox: "tests"}
-          - {name: Mac, python: '3.9', os: macos-latest, nox: "tests"}
-          - {name: '3.8', python: '3.8', os: ubuntu-latest, nox: "tests"}
-          - {name: Lint, python: '3.9', os: ubuntu-latest, nox: "lint"}
+          - {name: Linux, python: '3.10', os: ubuntu-latest, nox: "tests"}
+          - {name: Windows, python: '3.10', os: windows-latest, nox: "tests"}
+          - {name: Mac, python: '3.10', os: macos-latest, nox: "tests"}
+          - {name: Py39, python: '3.9', os: ubuntu-latest, nox: "tests"}
+          - {name: Py38, python: '3.8', os: ubuntu-latest, nox: "tests"}
+          - {name: Lint, python: '3.10', os: ubuntu-latest, nox: "lint"}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
-      - name: update pip
-        run: |
-          pip install -U wheel
-          pip install -U setuptools
-          python -m pip install -U pip
       - run: pip install nox
       - run: nox --session=${{ matrix.nox }} --python=${{ matrix.python }}
