--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,5 +29,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
-      - run: pip install nox
-      - run: nox --session=${{ matrix.nox }} --python=${{ matrix.python }}
+      - name: Update pip and install nox
+        run: |
+          pip install --upgrade pip
+          pip install nox
+      - name: Run tests
+        run: nox --session=${{ matrix.nox }} --python=${{ matrix.python }}
