--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "loguru >= 0.6",
     "numpy >= 1.20",
     "pymunk >= 6.0",
+    "scipy >= 1.0",
 ]
 dynamic = ["version"]
 
