--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Life",
     "Typing :: Typed",
 ]
-requires-python = ">= 3.8"
+requires-python = ">= 3.10"
 dependencies = [
     "loguru >= 0.6",
     "numpy >= 1.20",
     "pymunk >= 6.0",
     "scipy >= 1.0",
+    "typing_extensions >= 4.0 ; python_version<'2.7'"
 ]
 dynamic = ["version"]
 
