--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "numpy >= 1.20",
     "pymunk >= 6.0",
     "scipy >= 1.0",
-    "typing_extensions >= 4.0 ; python_version<'2.7'"
+    "typing_extensions >= 4.0"
 ]
 dynamic = ["version"]
 
