--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,12 +18,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {name: Linux, python: '3.10', os: ubuntu-latest, nox: "tests"}
+          - {name: Linux, python: '3.11', os: ubuntu-latest, nox: "tests"}
           - {name: Windows, python: '3.10', os: windows-latest, nox: "tests"}
           - {name: Mac, python: '3.10', os: macos-latest, nox: "tests"}
+          - {name: Py310, python: '3.10', os: ubuntu-latest, nox: "tests"}
           - {name: Py39, python: '3.9', os: ubuntu-latest, nox: "tests"}
           - {name: Py38, python: '3.8', os: ubuntu-latest, nox: "tests"}
-          - {name: Lint, python: '3.10', os: ubuntu-latest, nox: "lint"}
+          - {name: Lint, python: '3.11', os: ubuntu-latest, nox: "lint"}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
