--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,11 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Life",
     "Typing :: Typed",
 ]
-requires-python = ">= 3.8"
+requires-python = ">= 3.9"
 dependencies = [
+    "chex >= 0.1.82",
     "loguru >= 0.6",
-    "numpy >= 1.20",
+    "jax >= 0.4",
     "pymunk >= 6.0",
     "scipy >= 1.0",
     "typing_extensions >= 4.0"
@@ -32,7 +33,6 @@ moderngl = [
     "moderngl >= 5.6",
     "moderngl-window >= 2.4"
 ]
-pygame = ["pygame >= 2.0"]
 pyside6 = ["PySide6 >= 6.4.1"]
 video = ["imageio-ffmpeg >= 0.4"]
 
