--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,9 @@ classifiers = [
 requires-python = ">= 3.9"
 dependencies = [
     "chex >= 0.1.82",
-    "loguru >= 0.6",
+    "equinox >= 0.11",
     "jax >= 0.4",
-    "pymunk >= 6.0",
-    "scipy >= 1.0",
-    "typing_extensions >= 4.0"
+    "optax >= 0.1",
 ]
 dynamic = ["version"]
 
