--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 requires-python = ">= 3.9"
 dependencies = [
     "chex >= 0.1.82",
+    "distrax >= 0.1",
     "equinox >= 0.11",
     "jax >= 0.4",
     "optax >= 0.1",
