--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,16 +22,15 @@ dependencies = [
     "chex >= 0.1.82",
     "distrax >= 0.1",
     "equinox >= 0.11",
+    "moderngl >= 5.6",
+    "moderngl-window >= 2.4",
     "jax >= 0.4",
+    "pyserde >= 0.12",
     "optax >= 0.1",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-moderngl = [
-    "moderngl >= 5.6",
-    "moderngl-window >= 2.4"
-]
 pyside6 = ["PySide6 >= 6.4.1"]
 video = ["imageio-ffmpeg >= 0.4"]
 
