--- a/config/env/20231214-square.toml
+++ b/config/env/20231214-square.toml
@@ -22,7 +22,7 @@ max_force = 40.0
 min_force = -20.0
 init_energy = 20.0
 energy_capacity = 100.0
-force_energy_consumption = 0.01 / 40.0
+force_energy_consumption = 0.00025
 energy_share_ratio = 0.4
 n_velocity_iter = 6
 n_position_iter = 2
