--- a/config/env/20231214-square.toml
+++ b/config/env/20231214-square.toml
@@ -1,7 +1,7 @@
 n_initial_agents = 20
 n_max_agents = 100
-n_max_foods = 20
-food_num_fn = ["logistic", 0.01, 20]
+n_max_foods = 40
+food_num_fn = ["logistic", 20, 0.01, 40]
 food_loc_fn = "gaussian"
 agent_loc_fn = "uniform"
 xlim = [0.0, 360.0]
