Test gops config

--- a/config/gops/20231220-mutation-01.toml
+++ b/config/gops/20231220-mutation-01.toml
@@ -1,8 +1,11 @@
 path = "emevo.genetic_ops.BernoulliMixtureMutation"
 
-[reward]
-min_value = -1.0
-max_value = 1.0
-initial = 0.0
+[params]
+mutation_prob = 0.1
 
-[metadata]
+[params.mutator]
+path = "emevo.genetic_ops.UniformMutation"
+
+[params.mutator.params]
+min_noise = -1.0
+max_noise = 1.0
