--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,8 +61,9 @@ select = ["E", "F", "B", "UP"]
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
+"src/emevo/reward_fn.py" = ["B023"]
 # For pyserde
-"src/emevo/exp_utils.py" = ["UP006", "UP035"]
+"src/emevo/exp_utils.py" = ["UP006", "UP007", "UP035"]
 # For typer
 "experiments/**/*.py" = ["B008", "UP006", "UP007"]
 "smoke-tests/*.py" = ["B008", "UP006", "UP007"]
