Some scripts for jupyter lab analysis

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 **/.mypy_cache/
 .virtual_documents/
 .ipynb_checkpoints/
+analysis-notebooks/
 requirements/*.txt
 # This should be local
 pyrightconfig.json
