--- a/config/env/20231227-big-obstacle.toml
+++ b/config/env/20231227-big-obstacle.toml
@@ -1,14 +1,13 @@
 n_initial_agents = 20
-n_max_agents = 200
-n_max_foods = 40
-food_num_fn = ["logistic", 20, 0.01, 40]
+n_max_agents = 120
+n_max_foods = 50
+food_num_fn = ["logistic", 20, 0.01, 50]
 food_loc_fn = "gaussian"
 agent_loc_fn = "uniform"
 xlim = [0.0, 480.0]
 ylim = [0.0, 360.0]
-env_radius = 120.0
 env_shape = "square"
-neighbor_stddev = 40.0
+neighbor_stddev = 100.0
 n_agent_sensors = 16
 sensor_length = 100.0
 sensor_range = "wide"
@@ -21,8 +20,8 @@ angular_damping = 0.6
 max_force = 40.0
 min_force = -20.0
 init_energy = 40.0
-energy_capacity = 100.0
-force_energy_consumption = 0.00025
+energy_capacity = 120.0
+force_energy_consumption = 4e-5
 energy_share_ratio = 0.4
 n_velocity_iter = 6
 n_position_iter = 2
