--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,9 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-pyside6 = ["PySide6 >= 6.5"]
+analysis = ["networkx >= 3.0", "pygraphviz >= 1.0", "pyarrow >= 8.0"]
 video = ["imageio-ffmpeg >= 0.4"]
+widget = ["PySide6 >= 6.5"]
 
 [project.readme]
 file = "README.md"
