--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,13 +25,14 @@ dependencies = [
     "moderngl >= 5.6",
     "moderngl-window >= 2.4",
     "jax >= 0.4",
+    "pyarrow >= 8.0",
     "pyserde[toml] >= 0.12",
     "optax >= 0.1",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-analysis = ["networkx >= 3.0", "pygraphviz >= 1.0", "pyarrow >= 8.0"]
+analysis = ["networkx >= 3.0", "pygraphviz >= 1.0"]
 video = ["imageio-ffmpeg >= 0.4"]
 widget = ["PySide6 >= 6.5"]
 
