--- a/config/env/20240110-less-foods.toml
+++ b/config/env/20240110-less-foods.toml
@@ -3,11 +3,12 @@ n_max_agents = 120
 n_max_foods = 60
 food_num_fn = [
    "scheduled",
-   2024000,
+   2048000,
    ["logistic", 20, 0.01, 60],
    ["logistic", 20, 0.01, 50],
    ["logistic", 20, 0.01, 40],
-   ["logistic", 20, 0.01, 30]
+   ["logistic", 20, 0.01, 30],
+   ["logistic", 20, 0.01, 40],
 ]
 food_loc_fn = "gaussian"
 agent_loc_fn = "uniform"
