--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,13 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-analysis = ["networkx >= 3.0", "pygraphviz >= 1.0"]
+analysis = [
+    "matplotlib >= 3.0",
+    "networkx >= 3.0",
+    "pygraphviz >= 1.0",
+    "PySide6 >= 6.5",
+]
 video = ["imageio-ffmpeg >= 0.4"]
-widget = ["PySide6 >= 6.5"]
 
 [project.readme]
 file = "README.md"
