--- a/config/env/20240116-food-cycle-2.toml
+++ b/config/env/20240116-food-cycle-2.toml
@@ -15,6 +15,8 @@ food_num_fn = [
    ["logistic", 20, 0.01, 40],
    ["logistic", 20, 0.01, 50],
 ]
+xlim = [0.0, 480.0]
+ylim = [0.0, 360.0]
 food_loc_fn = "gaussian"
 agent_loc_fn = "uniform"
 env_shape = "square"
