log_plotting.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dynamic = ["version"]
 analysis = [
     "matplotlib >= 3.0",
     "networkx >= 3.0",
+    "polars >= 0.20",
     "pygraphviz >= 1.0",
     "PySide6 >= 6.5",
 ]
