--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,11 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
+# pygraphviz >= 1.0 is also required to draw phylogenetic treee, but excluded here for Github CI
 analysis = [
     "matplotlib >= 3.0",
     "networkx >= 3.0",
     "polars >= 0.20",
-    "pygraphviz >= 1.0",
     "PySide6 >= 6.5",
 ]
 video = ["imageio-ffmpeg >= 0.4"]
