--- a/config/env/20240210-square-smallbody.toml
+++ b/config/env/20240210-square-smallbody.toml
@@ -1,16 +1,9 @@
 n_initial_agents = 50
 n_max_agents = 150
-n_max_foods = 80
-n_food_sources = 2
-food_num_fn = [
-    ["logistic", 15, 0.01, 30],
-    ["logistic", 15, 0.01, 30],
-]
-food_loc_fn = [
-   ["gaussian", [360.0, 270.0], [48.0, 36.0]],
-   ["gaussian", [120.0, 90.0], [48.0, 36.0]],
-]
-# food_color = [[254, 2, 162, 255], [2, 254, 162, 255]]
+n_max_foods = 50
+basic_energy_consumption = 1e-4
+food_num_fn = ["logistic", 20, 0.01, 50]
+food_loc_fn = "gaussian"
 agent_loc_fn = "uniform"
 xlim = [0.0, 480.0]
 ylim = [0.0, 360.0]
@@ -19,7 +12,7 @@ neighbor_stddev = 100.0
 n_agent_sensors = 16
 sensor_length = 120.0
 sensor_range = "wide"
-agent_radius = 10.0
+agent_radius = 7.5
 food_radius = 4.0
 foodloc_interval = 1000
 dt = 0.1
