--- a/config/env/20240214-seasons-tri-i1000.toml
+++ b/config/env/20240214-seasons-tri-i1000.toml
@@ -2,23 +2,16 @@ n_initial_agents = 50
 n_max_agents = 150
 n_max_foods = 60
 food_num_fn = ["logistic", 20, 0.01, 60]
-# food_loc_fn = [
-#    "scheduled",
-#    1024000,
-#    ["gaussian", [360.0, 270.0], [48.0, 36.0]],
-#    ["switching",
-#        1000,
-#        ["gaussian", [360.0, 270.0], [48.0, 36.0]],
-#        ["gaussian", [240.0, 90.0], [48.0, 36.0]],
-#        ["gaussian", [120.0, 270.0], [48.0, 36.0]],
-#    ],
-# ]
 food_loc_fn = [
-    "switching",
-    1000,
-    ["gaussian", [360.0, 270.0], [48.0, 36.0]],
-    ["gaussian", [240.0, 90.0], [48.0, 36.0]],
-    ["gaussian", [120.0, 270.0], [48.0, 36.0]],
+   "scheduled",
+   1024000,
+   ["gaussian", [360.0, 270.0], [48.0, 36.0]],
+   ["switching",
+       1000,
+       ["gaussian", [360.0, 270.0], [48.0, 36.0]],
+       ["gaussian", [240.0, 90.0], [48.0, 36.0]],
+       ["gaussian", [120.0, 270.0], [48.0, 36.0]],
+   ],
 ]
 agent_loc_fn = "uniform"
 xlim = [0.0, 480.0]
