--- a/config/env/20240216-4seasons.toml
+++ b/config/env/20240216-4seasons.toml
@@ -5,7 +5,11 @@ food_num_fn = ["logistic", 20, 0.01, 60]
 food_loc_fn = [
    "scheduled",
    1024000,
-   ["gaussian", [360.0, 270.0], [48.0, 36.0]],
+   ["gaussian-mixture",
+       [0.5, 0.5],
+       [[360.0, 180.0], [120.0, 180.0]],
+       [[48.0, 36.0], [48.0, 36.0]],
+   ]
    ["switching",
        1000,
        ["gaussian", [360.0, 180.0], [48.0, 36.0]],
