--- a/config/env/20240216-poison.toml
+++ b/config/env/20240216-poison.toml
@@ -1,18 +1,19 @@
 n_initial_agents = 50
 n_max_agents = 150
-n_max_foods = 60
+n_max_foods = 80
 n_food_sources = 2
 food_num_fn = [
-    ["logistic", 20, 0.01, 40],
+    ["logistic", 20, 0.01, 60],
     ["logistic", 10, 0.01, 20],
 ]
 food_loc_fn = [
-   ["gaussian", [300.0, 180.0], [48.0, 36.0]],
-   ["gaussian", [180.0, 180.0], [48.0, 36.0]],
+   ["gaussian", [320.0, 180.0], [48.0, 36.0]],
+   ["gaussian", [160.0, 180.0], [48.0, 36.0]],
 ]
 food_color = [[254, 2, 162, 255], [2, 254, 162, 255]]
 food_energy_coef = [1.0, -0.1]
 agent_loc_fn = "uniform"
+observe_food_label = true
 xlim = [0.0, 480.0]
 ylim = [0.0, 360.0]
 env_shape = "square"
