--- a/config/env/20240217-4seasons-easy.toml
+++ b/config/env/20240217-4seasons-easy.toml
@@ -1,11 +1,15 @@
 n_initial_agents = 50
 n_max_agents = 150
-n_max_foods = 60
-food_num_fn = ["logistic", 20, 0.01, 60]
+n_max_foods = 80
+food_num_fn = ["logistic", 40, 0.01, 80]
 food_loc_fn = [
    "scheduled",
    1024000,
-   ["gaussian", [360.0, 270.0], [48.0, 36.0]],
+   ["gaussian-mixture",
+       [0.5, 0.5],
+       [[360.0, 180.0], [120.0, 180.0]],
+       [[48.0, 36.0], [48.0, 36.0]],
+   ]
    ["switching",
        1000,
        ["gaussian", [360.0, 180.0], [48.0, 36.0]],
