--- a/config/env/20240224-ls-4season.toml
+++ b/config/env/20240224-ls-4season.toml
@@ -33,6 +33,7 @@ min_force = -20.0
 init_energy = 40.0
 energy_capacity = 400.0
 force_energy_consumption = 2e-5
+basic_energy_consumption = 2e-4
 energy_share_ratio = 0.4
 n_velocity_iter = 6
 n_position_iter = 2
