--- a/config/env/20240226-6s-lvp.toml
+++ b/config/env/20240226-6s-lvp.toml
@@ -2,14 +2,19 @@ n_initial_agents = 50
 n_max_agents = 150
 n_max_foods = 60
 food_num_fn = ["logistic", 30, 0.01, 60]
-food_loc_fn = ["switching",
-    1000,
-    ["gaussian", [360.0, 270.0], [48.0, 36.0]],
-    ["gaussian", [240.0, 270.0], [48.0, 36.0]],
-    ["gaussian", [120.0, 270.0], [48.0, 36.0]],
-    ["gaussian", [120.0, 90.0], [48.0, 36.0]],
-    ["gaussian", [240.0, 90.0], [48.0, 36.0]],
-    ["gaussian", [360.0, 90.0], [48.0, 36.0]],
+food_loc_fn = [
+   "scheduled",
+   102400,
+   ["gaussian", [360.0, 270.0], [80.0, 60.0]],
+   ["switching",
+       1000,
+       ["gaussian", [360.0, 270.0], [48.0, 36.0]],
+       ["gaussian", [240.0, 270.0], [48.0, 36.0]],
+       ["gaussian", [120.0, 270.0], [48.0, 36.0]],
+       ["gaussian", [120.0, 90.0], [48.0, 36.0]],
+       ["gaussian", [240.0, 90.0], [48.0, 36.0]],
+       ["gaussian", [360.0, 90.0], [48.0, 36.0]],
+   ],
 ]
 agent_loc_fn = "uniform"
 xlim = [0.0, 480.0]
