--- a/config/bd/20240318-mild-slope.toml
+++ b/config/bd/20240318-mild-slope.toml
@@ -3,10 +3,10 @@ hazard_fn = "emevo.birth_and_death.SlopeELGHazard"
 
 [hazard_params]
 scale = 0.01
-alpha = 0.1
-slope = 1.0 # 0.2
-alpha_age = 1e-6
-beta = 1e-5
+alpha = 0.02
+slope = 0.2
+alpha_age = 1e-7
+beta = 4e-6
 
 [birth_params]
 scale = 4e-4
