--- a/config/env/20240606-circle.toml
+++ b/config/env/20240606-circle.toml
@@ -1,12 +1,13 @@
 n_initial_agents = 50
 n_max_agents = 200
-n_max_foods = 50
-food_num_fn = ["constant", 40]
+n_max_foods = 100
+food_num_fn = ["constant", 100]
 food_loc_fn = "uniform"
 agent_loc_fn = "uniform"
 xlim = [0.0, 480.0]
-ylim = [0.0, 360.0]
-env_shape = "square"
+ylim = [0.0, 480.0]
+env_shape = "circle"
+env_radius = 240.0
 neighbor_stddev = 100.0
 n_agent_sensors = 24
 sensor_length = 200.0
@@ -19,7 +20,7 @@ linear_damping = 0.8
 angular_damping = 0.6
 max_force = 80.0
 min_force = -20.0
-init_energy = 20.0
+init_energy = 40.0
 energy_capacity = 400.0
 force_energy_consumption = 2e-5
 basic_energy_consumption = 1e-3
@@ -28,4 +29,4 @@ n_velocity_iter = 6
 n_position_iter = 2
 n_physics_iter = 5
 max_place_attempts = 10
-n_max_food_regen = 40
+n_max_food_regen = 10
