--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,11 +29,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
-      - name: Update pip and install nox
-        run: |
-          pip install --upgrade pip
-          pip install nox
-      - name: Run pip compile
-        run: nox --session=compile
+      - name: Install uv
+        run: pip install uv
+      - name: Sync
+        run: make sync
       - name: Run tests
-        run: nox --session=${{ matrix.nox }} --python=${{ matrix.python }}
+        run: make test
