--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ analysis = [
 ]
 # Meta feature to install CUDA12 jax
 cuda12 = ["jax[cuda12]"]
-widget = ["PySide6 >= 6.5"]
+widget = ["PySide6 == 6.6.0"]
 video = ["imageio-ffmpeg >= 0.4"]
 
 [project.readme]
