--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,8 @@ ignore = ["B905"]
 dev-dependencies = [
     "bqplot>=0.12",
     "ipykernel>=6.29.5",
+    "jupyterlab>=4.0",
+    "jupyterlab-code-formatter>=3.0",
     "pytest>=8.3.3",
     "seaborn>=0.12",
     "typer>=0.12",
