--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,8 +83,10 @@ ignore = ["B905"]
 
 [tool.uv]
 dev-dependencies = [
+    "black>=24.10.0",
     "bqplot>=0.12",
     "ipykernel>=6.29.5",
+    "isort>=5.13.2",
     "jupyterlab>=4.0",
     "jupyterlab-code-formatter>=3.0",
     "pytest>=8.3.3",
