Use uniform food dist. in small env

--- a/config/env/20241122-small-uniform.toml
+++ b/config/env/20241122-small-uniform.toml
@@ -2,7 +2,7 @@ n_initial_agents = 20
 n_max_agents = 100
 n_max_foods = 40
 food_num_fn = ["logistic", 20, 0.01, 40]
-food_loc_fn = "gaussian"
+food_loc_fn = "uniform"
 agent_loc_fn = "uniform"
 xlim = [0.0, 360.0]
 ylim = [0.0, 240.0]
