--- a/config/env/20241212-predator.toml
+++ b/config/env/20241212-predator.toml
@@ -31,12 +31,7 @@ max_place_attempts = 10
 n_max_food_regen = 10
 n_max_predators = 20
 predator_radius = 20.0
-n_predator_sensors = 20
-n_predator_tactile_bins: int = 8,
-        predator_sensor_length: int = 100,
-        predator_max_force: float = 40.0,
-        predator_min_force: float = -20.0,
-        predator_init_energy: float = 20.0,
-        predator_energy_capacity: float = 100.0,
-        pradator_force_ec: float = 0.01 / 40.0,
-        predator_basic_ec: float = 0.0,
+predator_sensor_length = 100
+predator_init_energy = 20.0
+predator_force_ec = 0.0001
+predator_basic_ec = 0.0
