Tweak predator config

--- a/config/env/20241212-predator.toml
+++ b/config/env/20241212-predator.toml
@@ -1,11 +1,11 @@
 n_initial_agents = 100
-n_max_agents = 200
+n_max_agents = 260
 n_max_foods = 120
-food_num_fn = ["linear", 40, 0.2, 120]
+food_num_fn = ["linear", 40, 0.4, 120]
 food_loc_fn = "uniform"
 agent_loc_fn = "uniform"
-xlim = [0.0, 540.0]
-ylim = [0.0, 540.0]
+xlim = [0.0, 600.0]
+ylim = [0.0, 600.0]
 env_shape = "square"
 neighbor_stddev = 100.0
 n_agent_sensors = 24
@@ -20,7 +20,7 @@ angular_damping = 0.6
 max_force = 80.0
 min_force = -20.0
 init_energy = 80.0
-energy_capacity = 400.0
+energy_capacity = 1000.0
 force_energy_consumption = 1e-5
 basic_energy_consumption = 5e-4
 energy_share_ratio = 0.4
@@ -32,6 +32,6 @@ n_max_food_regen = 10
 n_max_predators = 40
 predator_radius = 14.0
 predator_sensor_length = 200
-predator_init_energy = 20.0
-predator_force_ec = 0.0001
-predator_basic_ec = 0.0
+predator_init_energy = 40.0
+predator_force_ec = 2e-5
+predator_basic_ec = 1e-5
