--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "pyarrow >= 9.0",
     "pyserde[toml] >= 0.14",
     "optax >= 0.1",
-    "phyjax2d >= 0.1.3",
+    "phyjax2d >= 0.1.4",
 ]
 dynamic = ["version"]
 
@@ -96,3 +96,7 @@ dev-dependencies = [
     "typer >= 0.12",
     "tqdm >= 4.6",
 ]
+
+# For debug
+# [tool.uv.sources]
+# phyjax2d = { path = "../phyjax2d", editable = true }
