--- a/config/env/20241212-predator.toml
+++ b/config/env/20241212-predator.toml
@@ -1,7 +1,7 @@
 n_initial_agents = 160
-n_max_agents = 240
-n_max_foods = 200
-food_num_fn = ["linear", 40, 0.4, 200]
+n_max_agents = 250
+n_max_foods = 240
+food_num_fn = ["linear", 40, 0.5, 240]
 food_loc_fn = "uniform"
 agent_loc_fn = "uniform"
 xlim = [0.0, 600.0]
@@ -19,7 +19,7 @@ linear_damping = 0.8
 angular_damping = 0.6
 max_force = 80.0
 min_force = -20.0
-init_energy = 80.0
+init_energy = 100.0
 energy_capacity = 1000.0
 force_energy_consumption = 1e-5
 basic_energy_consumption = 5e-4
@@ -29,9 +29,11 @@ n_position_iter = 2
 n_physics_iter = 5
 max_place_attempts = 10
 n_max_food_regen = 10
-n_max_predators = 20
+n_max_predators = 10
+n_initial_predators = 5
 predator_radius = 14.0
 predator_sensor_length = 200
 predator_init_energy = 240.0
-predator_force_ec = 1e-5
+predator_force_ec = 2e-5
 predator_basic_ec = 1e-3
+predator_digestive_rate = 0.6
