--- a/config/env/20241212-predator.toml
+++ b/config/env/20241212-predator.toml
@@ -1,7 +1,9 @@
 n_initial_agents = 160
-n_max_agents = 250
+n_max_agents = 260
 n_max_foods = 300
 food_num_fn = ["linear", 40, 0.5, 300]
+xlim = [0.0, 600.0]
+ylim = [0.0, 600.0]
 food_loc_fn = "uniform"
 agent_loc_fn = "uniform"
 env_shape = "square"
@@ -27,7 +29,8 @@ n_position_iter = 2
 n_physics_iter = 5
 max_place_attempts = 10
 n_max_food_regen = 10
-n_max_predators = 10
+# Predator
+n_max_predators = 20
 n_initial_predators = 5
 predator_radius = 14.0
 predator_sensor_length = 200
@@ -35,6 +38,7 @@ predator_init_energy = 240.0
 predator_force_ec = 2e-5
 predator_basic_ec = 1e-3
 predator_digestive_rate = 0.6
+predator_eat_interval = 10
 # Mouth range
 n_tactile_bins = 12
 mouth_range = "full"
