--- a/config/env/20250108-predator-limited.toml
+++ b/config/env/20250108-predator-limited.toml
@@ -45,7 +45,7 @@ predator_basic_ec = 4e-3
 predator_digestive_rate = 0.6
 # Mouth range
 n_tactile_bins = 12
-mouth_range = "full"
+mouth_range = "front-wide"
 predator_mouth_range = "narrow"
 # Limit space
 xlim = [0.0, 720.0]
