--- a/config/env/20250110-predator-of.toml
+++ b/config/env/20250110-predator-of.toml
@@ -41,7 +41,7 @@ predator_digestive_rate = 0.8
 predator_eat_interval = 10
 # Mouth range
 n_tactile_bins = 12
-mouth_range = "full"
+mouth_range = "front-wide"
 predator_mouth_range = "narrow"
 predator_space_limit = true
 obstacles = "one-fourth"
