--- a/config/env/20241212-predator.toml
+++ b/config/env/20241212-predator.toml
@@ -42,4 +42,4 @@ predator_eat_interval = 10
 # Mouth range
 n_tactile_bins = 12
 mouth_range = "front-wide"
-predator_mouth_range = "narrow"
+predator_mouth_range = "same"
