Fix predator config to sensor=wide-160d

--- a/config/env/20241212-predator.toml
+++ b/config/env/20241212-predator.toml
@@ -10,7 +10,7 @@ env_shape = "square"
 neighbor_stddev = 100.0
 n_agent_sensors = 24
 sensor_length = 200.0
-sensor_range = "wide"
+sensor_range = "wide-160d"
 agent_radius = 10.0
 food_radius = 4.0
 foodloc_interval = 1000
