--- a/config/env/20250207-obstacle.toml
+++ b/config/env/20250207-obstacle.toml
@@ -8,9 +8,9 @@ food_loc_fn = "uniform"
 agent_loc_fn = "uniform"
 env_shape = "square"
 neighbor_stddev = 100.0
-n_agent_sensors = 24
+n_agent_sensors = 32
 sensor_length = 200.0
-sensor_range = "wide"
+sensor_range = "wide-160d"
 agent_radius = 10.0
 food_radius = 4.0
 foodloc_interval = 1000
