--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,10 @@ dependencies = [
     "equinox >= 0.11",
     "moderngl >= 5.6",
     "moderngl-window >= 2.4",
-    "jax >= 0.4.26",
+    "jax == 0.4.25",
     "pyarrow >= 9.0",
     "pyserde[toml] >= 0.14",
     "optax >= 0.1",
-    "phyjax2d >= 0.2",
 ]
 dynamic = ["version"]
 
