--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dynamic = ["version"]
 analysis = [
     "matplotlib >= 3.0",
     "networkx >= 3.0",
-    "polars >= 0.20",
+    "polars >= 1.0",
     "seaborn >= 0.12",
 ]
 # Meta feature to install CUDA12 jax
@@ -93,6 +93,7 @@ dev-dependencies = [
     "jupyterlab-code-formatter >= 3.0",
     "treescope >= 0.1",
     "pytest >= 8.3.3",
+    "polars-u64-idx >= 1.0",
     "typer >= 0.12",
     "tqdm >= 4.6",
 ]
