--- a/config/env/20250412-right-uniform.toml
+++ b/config/env/20250412-right-uniform.toml
@@ -3,15 +3,7 @@ n_max_agents = 240
 n_max_foods = 120
 food_num_fn = ["linear", 20, 0.2, 120]
 food_loc_fn = [
-  "gaussian-linear",
-  [
-    240.0,
-    240.0,
-  ],
-  [
-    48.0,
-    48.0,
-  ],
+  "uniform-linear",
   [
     0.012,
     0.0,
