--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,8 @@ dev-dependencies = [
     "treescope >= 0.1",
     "pytest >= 8.3.3",
     "polars-u64-idx >= 1.0",
+    "scikit-learn >= 1.6",
+    "statsmodels >= 0.14",
     "typer >= 0.12",
     "tqdm >= 4.6",
 ]
