--- a/config/env/20250801-sodium-sep.toml
+++ b/config/env/20250801-sodium-sep.toml
@@ -8,7 +8,10 @@ food_num_fn = [
     ["linear", 20, 0.2, 120],
     ["linear", 20, 0.2, 60],
 ]
-food_loc_fn = ["uniform", "uniform"]
+food_loc_fn = [
+    ["uniform", [0.0, 240.0, 0.0, 480.0]],
+    ["uniform", [240.0, 480.0, 0.0, 480.0]]
+]
 food_color = [[222, 116, 253, 255], [200, 200, 200, 255]]
 foods_min_dist = 40.0
 agent_loc_fn = "uniform"
