--- a/config/env/20251001-predator-largemouth.toml
+++ b/config/env/20251001-predator-largemouth.toml
@@ -42,4 +42,4 @@ predator_eat_interval = 10
 # Mouth range
 n_tactile_bins = 18
 mouth_range = [0, 1, 2, 15, 16, 17]  # 20 * 6 = 120
-predator_mouth_range = [0, 1, 17]  # 20 * 3 = 60
+predator_mouth_range = [0, 1, 16, 17]  # 20 * 4 = 80
